# debris-simulator

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
ai/: 2025-12-11-read-the-project-outline-in-aiastroscalemd.txt  2025-12-11-the-rust-project-is-in-debris.txt  astroscale.md
src/: collision.rs  lib.rs  math.rs  orbit.rs  state_machine.rs  types.rs
