[package]
name = "debris-simulator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Embassy async runtime for embedded
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["tick-hz-1_000_000"] }
embassy-rp = { version = "0.2", features = ["time-driver", "unstable-pac", "boot2-w25q080"] }
embassy-sync = { version = "0.6" }

# Cortex-M runtime
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"

# Logging and panic handling
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Utilities
heapless = "0.8"
micromath = "2.1"  # Fast f32 math (sin, cos, sqrt)

# Optional: for future USB CDC (serial over USB)
embassy-usb = { version = "0.3", optional = true }

[dev-dependencies]
# For unit tests on desktop
approx = "0.5"

[profile.release]
debug = 2  # Keep debug symbols for flashing
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1

[profile.dev]
debug = 2
opt-level = 1  # Some optimization for embedded

[[bin]]
name = "debris-simulator"
test = false
bench = false
